--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ipfs-api": "^6.0.3",
     "ipfs-unixfs": "^0.1.4",
     "ipfsd-ctl": "^0.14.0",
+    "is-ipfs": "^0.2.0",
     "listen-random-port": "^1.0.0",
     "loglevel": "^1.4.1",
     "mime": "^1.3.4"
